--- a/baitaplon.html
+++ b/baitaplon.html
@@ -5,37 +5,56 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="component.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
     <title>Listen App</title>
 </head>
 
 <body>
     <div id="mySidebar" class="sidebar">
-        <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
-        <a href="#">About</a>
-        <a href="#">Services</a>
-        <a href="#">Clients</a>
-        <a href="#">Contact</a>
+        <div class="logo"><img src="images/logo.svg" alt="Logo hỏng"><a href="#" class="closebtn"
+                onclick="closeNav()">☰</a></div>
+        <div class="tittle"><a href="#"><i class="fa-solid fa-house"></i>Home</a></div>
+        <div class="tittle"><a href="#"><i class="fa-regular fa-circle-play"></i>Genres</a></div>
+        <div class="tittle"><a href="#"><i class="fa-solid fa-music"></i>Free Music</a></div>
+        <div class="tittle"><a href="#"><i class="fa-regular fa-circle-dot"></i></i>Album</a></div>
+        <div class="tittle"><a href="#"><i class="fa-solid fa-microphone"></i>Artists</a></div>
+        <div class="tittle"><a href="#"><i class="fa-regular fa-hard-drive"></i>Stations</a></div>
+        <h3>Music</h3>
+        <div class="tittle"><a href="#"><i class="fa-solid fa-chart-pie"></i>Analystics</a></div>
+        <div class="tittle"><a href="#"><i class="fa-regular fa-heart"></i>Favorites</a></div>
+        <div class="tittle"><a href="#"><i class="fa-solid fa-clock-rotate-left"></i>History</a></div>
+        <h3>Events</h3>
+        <div class="tittle"><a href="#"><i class="fa-regular fa-calendar-days"></i>Events</a></div>
+        <div class="under"></div>
+        <div class="btn"><button><i class="fa-solid fa-music"></i>Add Music</button></div>
     </div>
-
-    <div id="main">
-        <button class="openbtn" onclick="openNav()">☰ Open Sidebar</button>
-        <h2>Collapsed Sidebar</h2>
-        <p>Click on the hamburger menu/bar icon to open the sidebar, and push this content to the right.</p>
-    </div>
-
-    <script>
-        function openNav() {
-            document.getElementById("mySidebar").style.width = "250px";
-            document.getElementById("main").style.marginLeft = "250px";
-        }
-
-        function closeNav() {
-            document.getElementById("mySidebar").style.width = "0";
-            document.getElementById("main").style.marginLeft = "0";
-        }
-    </script>
-
+    <section id="body">
+        <header>
+            <div id="main" class="btn">
+                <button class="openbtn" onclick="openNav()">☰</button>
+            </div>
+            <div class="nvarbar">
+                <div class="left">
+                    
+                    <div class="search"><i class="fa-solid fa-magnifying-glass"></i><input type="text" placeholder="Type anything to get result..." value="Type anything to get result..."></div>
+                </div>
+                <div class="right">
+                    <div class="language"><i class="fa-solid fa-earth-americas"></i>Language</div>
+                    <div class="user"><img src="images/thumb.jpg" alt="lỗi">Androws</div>
+                </div>
+            </header>
+            <footer>
+                <div class="email">info@listenapp</div>
+                <div class="btn">
+                    <button class="ggplay"><i class="fa-brands fa-google-play"></i>Google Play</button>
+                    <button class="appstore"><i class="fa-brands fa-app-store"></i>App Store</button>
+                </div>
+            </div>
+            
+        </footer>
+    </section>
+    <script src="script.js"></script>
 </body>
 
 </html>
