--- a/t.html
+++ b/t.html
@@ -152,13 +152,13 @@
 
                         <!-- <span class="badge rounded-pill bg-info"><i class="fa-brands fa-gratipay" style="color: red; size: 50px;"></i></span> -->
 
-                        <span><i class="fa-brands fa-gratipay" style="color: red; "></i></span>
+                        <span><i class="fa-solid fa-heart" style="color: white; background:red; border-radius:40px;font-size: 13px; padding: 4px"></i></span>
                         <img class="music-image" src="images/1.jpg" alt="pic1"> 
                         <div class="music-name">I love you mummy</div>
                         <div class="music-singer">Arebica Luna</div>
                     </div>
                     <div class="cols infor-music">
-                        <span><i class="fa-solid fa-crown" style="color: aqua;"></i></span>
+                        <span><i class="fa-solid fa-crown" style="background-color: aqua; color: white;border-radius:40px;font-size: 13px; padding: 4px"></i></span>
 
                         <img  class="music-image" src="images/2.jpg" alt="pic2"><br>
                         <div class="music-name">Shack your butty</div>
@@ -171,15 +171,15 @@
                         <div class="music-singer">Zunira Wily, Nutty Nina</div>
                     </div>
                     <div class="cols infor-music">
-                        <span><i class="fa-brands fa-gratipay" style="color: red;"></i></span>
-                        <span><i class="fa-solid fa-crown" style="color: aqua; left: 45px;"></i></span>
+                        <span><i class="fa-solid fa-heart" style="color: white; background:red; border-radius:40px;font-size: 13px; padding: 4px"></i></span>
+                        <span><i class="fa-solid fa-crown" style="background-color: aqua; left: 47px; color: white;border-radius:40px;font-size: 13px; padding: 4px"></i></span>
 
                         <img  class="music-image" src="images/4.jpg" alt="pic4">
                         <div class="music-name">Say yes</div>
                         <div class="music-singer">Johnny Marro</div>
                     </div>
                     <div class="cols infor-music">
-                        <span><i class="fa-solid fa-crown" style="color: aqua;"></i></span>
+                        <span><i class="fa-solid fa-crown" style="background-color: aqua; color: white;border-radius:40px;font-size: 13px; padding: 4px"></i></span>
 
                         <img  class="music-image" src="images/5.jpg" alt="pic5">
                         <div class="music-name">Where is your letter</div>
