--- a/green.html
+++ b/green.html
@@ -64,13 +64,16 @@
             }
             .list-firt-song2
             {
-                float:left;
+                width:50%
             }
             .list-second-song2
             {
-                float:right;
+                width: 50%;
                 
             }
+            .part2
+            {display: flex;
+            overflow: auto;}
     
     </style>
 </head>
@@ -132,7 +135,7 @@
     </div>
     <div class="song">
         <div class="img-music">
-           <img src="images/6.jpg" width="50px">
+           <img src="images/4.jpg" width="50px">
         </div>
         <div class="title-music">
         <span class="bold-title">Sadness inside</span><br>
@@ -175,6 +178,7 @@
                         <span class="span-view">VIEW ALL</span>
                     </div>
                 </div>
+    <div class="part2">
     <div class="list-firts-song2">
     <div class="song2">
             <div class="img-music">
@@ -369,6 +373,7 @@
 </div>
 </div>
 </div>
-</div>       
+</div>   
+</div>    
 </body>
 </html>
