--- a/baitaplon.html
+++ b/baitaplon.html
@@ -101,7 +101,7 @@
                     </div>
                 </div>
             </div>
-            <!-- <div class="middle-page">
+            <div class="middle-page">
                 <div class="left-event">
                     <div class="events">
                         <div class="head">
@@ -274,7 +274,7 @@
         </div>
     </div>
                 </div>
-            </div> -->
+            </div>
             <div class="feature-artists">
                 <div class="body1">
 
@@ -320,7 +320,7 @@
                     <span class="swiper-pagination-bullet1"></span>
                 </div>
             </div>
-            <!-- <div class="top-alb">
+            <div class="top-alb">
                 <div class="title">
                     <lable style="width:10%;color:#565554">TRENDING TO LISTEN</lable>
                     <div class="big-title">
@@ -546,7 +546,7 @@
                         </div>
                     </div>
                 </div>
-            </div> -->
+            </div>
             <footer>
                 <div class="email">info@listenapp</div>
                 <div class="btn">
